# coverquery

./: .gitignore  PROMPT.md  TASKS.md  coverquery  coverquery.example.yaml  pyproject.toml
src/coverquery/: __init__.py  __main__.py  cli.py  config.py  indexer.py  mcp_server.py  queries.py
tests/: test_cli.py  test_config.py  test_indexer.py  test_mcp_server.py  test_queries.py
